force-app/main/default/objects/skuid__Page__c/fields/skuid__API_Version__c.field-meta.xml
<CustomField>
    <fullName>skuid__API_Version__c</fullName>
    <description>The Skuid Core API version that this Page should use.</description>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>