force-app/main/default/objects/skuid__Page__c/fields/skuid__Count_Auto_Saved_Versions__c.field-meta.xml
<CustomField>
    <fullName>skuid__Count_Auto_Saved_Versions__c</fullName>
    <label># Auto-Saved Revisions</label>
    <summaryFilterItems>
        <field>skuid__Page_Version__c.skuid__IsAutoSave__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>skuid__Page_Version__c.skuid__Page__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>