force-app/main/default/objects/skuid__Page__c/fields/skuid__Max_Auto_Saves__c.field-meta.xml
<CustomField>
    <fullName>skuid__Max_Auto_Saves__c</fullName>
    <defaultValue>25</defaultValue>
    <inlineHelpText>The maximum number of automatically-saved Page Revisions Skuid will create for this Page before it will start deleting the oldest Auto-Saves.</inlineHelpText>
    <label>Max Auto-Saves</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>