force-app/main/default/objects/skuid__Page__c/fields/skuid__Module__c.field-meta.xml
<CustomField>
    <fullName>skuid__Module__c</fullName>
    <description>Which module is this Page included in?</description>
    <inlineHelpText>Which module is this Page included in?</inlineHelpText>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skuid</fullName>
            </value>
            <value>
                <fullName>SkuidSample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>